lib/twig/parsing/body_parsing.treetop
module Twig
module Parsing

grammar Body
  include Statement
  include Whitespace
  
  rule body
    first:statement 
    more:(
      non_delim_ws*
      statement_delim
      (non_delim_ws* statement_delim)*
      non_delim_ws*
      statement
    )*
    statement_delim*
  end
  
  rule statement_delim
    non_delim_ws* (";" / newline)
  end

  rule non_delim_ws
    space / tab / carriage_return
  end
end

end
end
